syntax = "proto3";

package kallax.tracker;

import "ChainMetadata.proto";
import "PeerAddress.proto";

service PeerService {
  rpc GetPeerAddresses(GetPeerAddressesRequest)
      returns (GetPeerAddressesResponse);

  rpc InsertPeerAddress(InsertPeerAddressRequest)
      returns (InsertPeerAddressResponse);

  /* rpc Length(LengthRequest) returns (LengthResponse); */
}

message GetPeerAddressesRequest { ChainMetadata chainMetadata = 1; }
message GetPeerAddressesResponse {
  ChainMetadata chainMetadata = 1;
  repeated PeerAddress addresses = 2;
}

message InsertPeerAddressRequest {
  ChainMetadata chainMetadata = 1;
  PeerAddress address = 2;
}
message InsertPeerAddressResponse {}
